--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/drawer": "^5.11.5",
     "@react-navigation/material-bottom-tabs": "^5.3.11",
     "@react-navigation/material-top-tabs": "^5.3.11",
@@ -23,10 +25,13 @@
     "react-minimal-pie-chart": "^8.1.0",
     "react-native": "0.63.4",
     "react-native-chart-kit": "^6.10.0",
+    "react-native-date-picker": "^3.2.9",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^4.7.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-pie": "^1.1.2",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.13.2",
@@ -34,6 +39,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
